--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li class="list_item"><a href="/lesson3/2/02_hard/index.html">Lesson 3(hard)</a></li>
         <li class="list_item"><a href="/lesson4/index.html">Lesson 4</a></li>
         <li class="list_item"><a href="/lesson5/index.html">Lesson 5(Hello Nameste)</a></li>
-        <li class="list_item"><a href="/lesson6/weather/index.html">Lesson 6(weather)</a></li>
+        <li class="list_item"><a href="/lesson5/index.html">Lesson 6 Weather</a></li>
     </ul>
 </div>
 </body>
