--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <li class="list_item"><a href="/lesson4/index.html">Lesson 4</a></li>
         <li class="list_item"><a href="/lesson5/index.html">Lesson 5(Hello Nameste)</a></li>
         <li class="list_item"><a href="/lesson5/index.html">Lesson 6 Weather</a></li>
+        <li class="list_item"><a href="/lesson7/1/index.html">Lesson 7(simple flex)</a></li>
+        <li class="list_item"><a href="/lesson7/2/index.html">Lesson 7(hard flex)</a></li>
     </ul>
 </div>
 </body>
