--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <li class="list_item"><a href="/lesson6(weather)/weather/index.html">Lesson 6 Weather</a></li>
         <li class="list_item"><a href="/lesson7/1/index.html">Lesson 7(simple flex)</a></li>
         <li class="list_item"><a href="/lesson7/2/index.html">Lesson 7(hard flex)</a></li>
+        <li class="list_item"><a href="/lesson8/1/index.html">Lesson 8(simple fonts)</a></li>
+        <li class="list_item"><a href="/lesson8/2/index.html">Lesson 8(hard fonts)</a></li>
     </ul>
 </div>
 </body>
