--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li class="list_item"><a href="/lesson7/2/index.html">Lesson 7(hard flex)</a></li>
         <li class="list_item"><a href="/lesson8/1/index.html">Lesson 8(simple fonts)</a></li>
         <li class="list_item"><a href="/lesson8/2/index.html">Lesson 8(hard fonts)</a></li>
+        <li class="list_item"><a href="/lesson9/1/index.html">Lesson 9(position)</a></li>
     </ul>
 </div>
 </body>
