--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <li class="list_item"><a href="/lesson8/1/index.html">Lesson 8(simple fonts)</a></li>
         <li class="list_item"><a href="/lesson8/2/index.html">Lesson 8(hard fonts)</a></li>
         <li class="list_item"><a href="/lesson9/1/index.html">Lesson 9(position)</a></li>
+        <li class="list_item"><a href="/lesson9/2/index.html">Lesson 9(position_hard)</a></li>
+        <li class="list_item"><a href="/lesson10/1/index.html">Lesson 10(1)</a></li>
+        <li class="list_item"><a href="/lesson10/2/index.html">Lesson 10(2)</a></li>
     </ul>
 </div>
 </body>
