--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
         <li class="list_item"><a href="/lesson9/2/index.html">Lesson 9(position_hard)</a></li>
         <li class="list_item"><a href="/lesson10/1/index.html">Lesson 10(1)</a></li>
         <li class="list_item"><a href="/lesson10/2/index.html">Lesson 10(2)</a></li>
+
+        <li class="list_item"><a href="/lesson11/1/index.html">Lesson 11(1)</a></li>
+        <li class="list_item"><a href="/lesson11/3/index.html">Lesson 11(3)</a></li>
+        <li class="list_item"><a href="/lesson11/4/index.html">Lesson 11(4)</a></li>
     </ul>
 </div>
 </body>
