--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
          <li class="list_item"><a href="/lesson11/1/index.html">Lesson 11(1)</a></li>
         <li class="list_item"><a href="/lesson11/3/index.html">Lesson 11(3)</a></li>
         <li class="list_item"><a href="/lesson11/4/index.html">Lesson 11(4)</a></li> 
+        <li class="list_item"><a href="/lesson12/1/index.html">Lesson 12(1)</a></li>
+        <li class="list_item"><a href="/lesson12/2/index.html">Lesson 12(2)</a></li>
     </ul>
 </div>
 </body>
