--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <li class="list_item"><a href="/lesson11/4/index.html">Lesson 11(4)</a></li> 
         <li class="list_item"><a href="/lesson12/1/index.html">Lesson 12(template1)</a></li>
         <li class="list_item"><a href="/lesson12/2/index.html">Lesson 12(template2)</a></li>
+        <li class="list_item"><a href="/lesson13/index.html">Lesson 13(template1)</a></li>
     </ul>
 </div>
 </body>
