--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <li class="list_item"><a href="/lesson12/1/index.html">Lesson 12(template1)</a></li>
         <li class="list_item"><a href="/lesson12/2/index.html">Lesson 12(template2)</a></li>
         <li class="list_item"><a href="/lesson13/index.html">Lesson 13(template1)</a></li>
+        <li class="list_item"><a href="/lesson14/1/index.html">Lesson 14(adaptive template1)</a></li>
     </ul>
 </div>
 </body>
