--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         <li class="list_item"><a href="/lesson12/2/index.html">Lesson 12(template2)</a></li>
         <li class="list_item"><a href="/lesson13/index.html">Lesson 13(template1)</a></li>
         <li class="list_item"><a href="/lesson14/1/index.html">Lesson 14(adaptive template1)</a></li>
+        <li class="list_item"><a href="/lesson15/home1/index.html">Lesson 15(adaptive template1 + navigation bar)</a></li>
+
     </ul>
 </div>
 </body>
