--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         <li class="list_item"><a href="/lesson14/1/index.html">Lesson 14(adaptive template1)</a></li>
         <li class="list_item"><a href="/lesson15/home1/index.html">Lesson 15(adaptive template1 + navigation bar)</a></li>
         <li class="list_item"><a href="/lesson16/index.html">Lesson 16(cross browser template)</a></li>
+
+        <li class="list_item"><a href="/exam/index.html">Exam1</a></li>
     </ul>
 </div>
 </body>
