--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <li class="list_item"><a href="/lesson15/home1/index.html">Lesson 15(adaptive template1 + navigation bar)</a></li>
         <li class="list_item"><a href="/lesson16/index.html">Lesson 16(cross browser template)</a></li>
 
-        <li class="list_item"><a href="/exam/index.html">Exam1</a></li>
+        <li class="list_item"><a href="/exam1/index.html">Exam1</a></li>
     </ul>
 </div>
 </body>
