--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
         <li class="list_item"><a href="/lesson16/index.html">Lesson 16(cross browser template)</a></li>
 
         <li class="list_item"><a href="/exam1/index.html">Exam1</a></li>
+        <li class="list_item"><a href="/lesson21/lesson1/index.html">Lesson 16(cross browser template)</a></li>
+        <li class="list_item"><a href="/lesson16/index.html">Lesson 16(cross browser template)</a></li>
     </ul>
 </div>
 </body>
