--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <li class="list_item"><a href="/lesson21/lesson1/index.html">Lesson 21(JS intro)</a></li>
         <li class="list_item"><a href="/lesson22/index.html">Lesson 22(Js data types)</a></li>
 
-        <li class="list_item"><a href="/lesson23/functions/index.html">Lesson 22(Js data types)</a></li>
-        <li class="list_item"><a href="/lesson23/loop/index.html">Lesson 22(Js data types)</a></li>
+        <li class="list_item"><a href="/lesson23/functions/index.html">Lesson 23 loops</a></li>
+        <li class="list_item"><a href="/lesson23/loop/index.html">Lesson 23 functions</a></li>
     </ul>
 </div>
 </body>
