--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 
         <li class="list_item"><a href="/lesson23/functions/index.html">Lesson 23 loops</a></li>
         <li class="list_item"><a href="/lesson23/loop/index.html">Lesson 23 functions</a></li>
+
+        <li class="list_item"><a href="/lesson24/1/index.html">Lesson 24 HTML5(anchor links)</a></li>
+        <li class="list_item"><a href="/lesson24/2/index.html">Lesson 24 HTML5(shopping list)</a></li>
     </ul>
 </div>
 </body>
