--- a/lesson24/1/text.html
+++ b/lesson24/1/text.html
@@ -15,6 +15,7 @@
              Эта глава описывает адресацию, существенный компонент,
              который помогает программному обеспечению TCP/IP скрывать детали физических сетей и создавать впечатление об интернете как о единой сущности.
         </p>
+        <a href="index.html" class="back">Назад до змісту</a>
         <h3 id="uni_indefications" class="text1">Универсальные идентификаторы</h3>
         <p >
             Говорят, что коммуникационная система обеспечивает универсальное средство взаимодействия, если она позволяет любой ГВМ связываться
@@ -29,6 +30,7 @@
                дем к рассмотрению только двоичных адресов, оставив на
               потом вопросы о том, как производится отображение между двоичными адресами и произносимыми именами, и о том, как использовать адреса для маршрутизации. 
         </p>
+        <a href="index.html" class="back">Назад до змісту</a>
         <h3 id="ip_adress" class="text1">Три основных класса IP-адресов</h3>
         <p>
             Думайте об интернете как о большой сети, такой же ,как и любая другая физическая сеть. Разница заключается в том, что интернет - это виртуальная структура, 
@@ -51,6 +53,7 @@
             IP-адрес был 
             определен таким образом, что можно быстро расширить идГВМ или идсет. Шлюзы используют для маршрутизации поле идсет и полагаются на его эффективное выделение.
         </p>
+        <a href="index.html" class="back">Назад до змісту</a>
         <h3 id="net_inclusions" class="text1">Адреса описывают сетевые соединения</h3>
         <p>
             Для простоты изложения предмета мы говорили, что межсетевой адрес идентифицирует ГВМ, но это не совсем так. Представим себе шлюз. присоединенный к двум физическим 
@@ -60,6 +63,7 @@
             Так как IP-адреса кодируют как сеть, так и ГВМ в этой сети, они не описывают конкретную машину, а только соединение ее с сетью.
             Поэтому шлюз, соединяющий N сетей, имеет N различных IP адресов, по одному на каждое сетевое соединение. 
         </p>
+        <a href="index.html" class="back">Назад до змісту</a>
         <h3 id="net_adresses" class="text1">Сетевые и широковещательные адреса</h3>
         <p>
             Мы уже отметили основное преимущество кодирования информации о сети в межсетевых адресах: оно делает возможной эффективную маршрутизацию. Другим преимуществом 4
@@ -76,6 +80,7 @@
             IP-адреса могут использоваться для указания широковещания и отображения его ваппаратное широковещание, если это возможно. По соглашению, широковещательный 
             адрес имеет поле идГВМ со всеми битами, равными 1. 
         </p>
+        <a href="index.html" class="back">Назад до змісту</a>
         <h3 id="limitation" class="text1">Ограниченное широковещание</h3>
         <p >
             Технически, широковещательный адрес, который мы уже описали, называется направленным(directed) широковещательным адресом, так как он содержит как корректный 
@@ -90,6 +95,7 @@
             узнает IP-адрес своей сети, он может использовать направленное широковещание. Как правило, протоколы TCP/IP ограничивают широковещание до 
             наименьшего возможного набора машин. Мы увидим, как это правило влияет на группы сетей, разделяющих адреса, в главе 6, когда будем рассматривать адресацию подсетей.
         </p>
+        <a href="index.html" class="back">Назад до змісту</a>
     </div>
    
 </div>
