--- a/lesson24/2/index.html
+++ b/lesson24/2/index.html
@@ -10,12 +10,12 @@
 <body>
     <section class="shopping-list">
         <ul>
-            <li><label for=""><input type="checkbox">bread</label></li>
-            <li><label for=""><input type="checkbox">milk</label></li>
-            <li><label for=""><input type="checkbox">cheese</label></li>
-            <li><label for=""><input type="checkbox">meat</label></li>
-            <li><label for=""><input type="checkbox">fish</label></li>
-            <li><label for=""><input type="checkbox">tomato</label></li>
+            <li><label for=""><input type="checkbox"><span>bread</span></label></li>
+            <li><label for=""><input type="checkbox"><span>milk</span></label></li>
+            <li><label for=""><input type="checkbox"><span>cheese</span></label></li>
+            <li><label for=""><input type="checkbox"><span>meat</span></label></li>
+            <li><label for=""><input type="checkbox"><span>fish</span></label></li>
+            <li><label for=""><input type="checkbox"><span>tomato</span></label></li>
         </ul>
     </section>
 </body>
