--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
 
         <li class="list_item"><a href="/lesson24/1/index.html">Lesson 24 HTML5(anchor links)</a></li>
         <li class="list_item"><a href="/lesson24/2/index.html">Lesson 24 HTML5(shopping list)</a></li>
+
+        <li class="list_item"><a href="/lesson26/index.html">Lesson 26 JS Objects</a></li>
     </ul>
 </div>
 </body>
