--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <li class="list_item"><a href="/lesson24/2/index.html">Lesson 24 HTML5(shopping list)</a></li>
 
         <li class="list_item"><a href="/lesson26/index.html">Lesson 26 JS Objects</a></li>
+        <li class="list_item"><a href="/lesson28/index.html">Lesson 28 JS Classes</a></li>
     </ul>
 </div>
 </body>
