--- a/lesson28/index.html
+++ b/lesson28/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="js.js"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Classes</title>
 </head>
 <body>
-    
+      <script src="js.js"></script>
 </body>
 </html>
