--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
 
         <li class="list_item"><a href="/lesson26/index.html">Lesson 26 JS Objects</a></li>
         <li class="list_item"><a href="/lesson28/index.html">Lesson 28 JS Classes</a></li>
+
+        <li class="list_item"><a href="/lesson29/index.html">Lesson 29 DOM</a></li>
     </ul>
 </div>
 </body>
