--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
         <li class="list_item"><a href="/lesson28/index.html">Lesson 28 JS Classes</a></li>
 
         <li class="list_item"><a href="/lesson29/index.html">Lesson 29 DOM</a></li>
+
+        <li class="list_item"><a href="/lesson31/index.html">Lesson 31 tabs</a></li>
     </ul>
 </div>
 </body>
