--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <li class="list_item"><a href="/lesson29/index.html">Lesson 29 DOM</a></li>
 
-        <li class="list_item"><a href="/lesson31/index.html">Lesson 31 tabs</a></li>
+        <li class="list_item"><a href="/lesson31/index.html">Lesson 31 tabsgit</a></li>
     </ul>
 </div>
 </body>
