--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
         <li class="list_item"><a href="/lesson29/index.html">Lesson 29 DOM</a></li>
 
         <li class="list_item"><a href="/lesson31/index.html">Lesson 31 tabsgit</a></li>
+
+        <li class="list_item"><a href="/lesson32/index.html">Lesson 32 slick slider</a></li>
     </ul>
 </div>
 </body>
