--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 
         <li class="list_item"><a href="/lesson29/index.html">Lesson 29 DOM</a></li>
 
+        <li class="list_item"><a href="/lesson30/index.html">Lesson 30 JS Events</a></li>
+
         <li class="list_item"><a href="/lesson31/1/index.html">Lesson 31 tabs</a></li>
         <li class="list_item"><a href="/lesson31/2/index.html">Lesson 31 calculator</a></li>
 
