--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
         <li class="list_item"><a href="/lesson31/2/index.html">Lesson 31 calculator</a></li>
 
         <li class="list_item"><a href="/lesson32/index.html">Lesson 32 slick slider</a></li>
+
+        <li class="list_item"><a href="/lesson34/index.html">Lesson 34 Google maps</a></li>
     </ul>
 </div>
 </body>
