--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <h1 class="title">Beetroot Academy lessons</h1>
         <img id="beetroot_img" src="beet-svgrepo-com.svg" alt="буряк">
     <ul id="lessons_list" class="lessons_list  ">
+
+        <li class="list_item"><a href="/exam2/index.html">exam2 JS</a></li>
         <li class="list_item"><a href="/lesson1/index.html">Lesson 1</a></li>
         <li class="list_item"><a href="/lesson1/додаткове/index.html">Lesson 1(додаткове)</a></li>
         <li class="list_item"><a href="/lesson2/index.html">Lesson 2</a></li>
