--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <img id="beetroot_img" src="beet-svgrepo-com.svg" alt="буряк">
     <ul id="lessons_list" class="lessons_list  ">
         <li class="list_item"><a href="/lesson38/app/index.html">lesson38 (Gulp)</a></li>
+        <li class="list_item"><a href="/lesson36/index.html">lesson36 (Animation)</a></li>
 
         <li class="list_item"><a href="/exam2/index.html">exam2 JS</a></li>
         <li class="list_item"><a href="/lesson1/index.html">Lesson 1</a></li>
