--- a/exam2/index.html
+++ b/exam2/index.html
@@ -75,6 +75,7 @@
 
 
  <!-- block 2 what we do -->
+ <div class="centerdiv">
   <div class="container2" id="projects">
      <div class="container2__line">
          <hr>
@@ -177,6 +178,7 @@
     </div>
     <button class="details6">see more</button>
 </div> 
+</div>
 <!-- maps -->
 <div id="map"></div> 
 
