--- a/lesson29/index.html
+++ b/lesson29/index.html
@@ -7,19 +7,40 @@
     <title>Document</title>
 </head>
 <body>
-  <button onclick="OpenWindow()">Open</button><br>
-  <div id="modalWindow">
-      <h3 class="modal_heading">Welcome</h3>
-      <p class="modal_text">to continue press "close"</p>
-      <button onclick="CloseWindow()">Close</button>
-  </div>
+    <div class="container">
+ 
 <button onclick="NextNode()" id="change_color" class="traffic_btn">Change color</button>
   <div id="traffic-lights" class="traffic-lights">
       <div id="circle" class="circle red"></div>
       <div id="circle" class="circle yellow"></div>
       <div id="circle" class="circle green"></div>
   </div>
-  
+
+   
+<button onclick="NextNode()" id="change_color" class="traffic_btn">Change color</button>
+<div id="traffic-lights" class="traffic-lights">
+    <div id="circle" class="circle red"></div>
+    <div id="circle" class="circle yellow"></div>
+    <div id="circle" class="circle green"></div>
+</div>
+
+
+ 
+<button onclick="NextNode()" id="change_color" class="traffic_btn">Change color</button>
+  <div id="traffic-lights" class="traffic-lights">
+      <div id="circle" class="circle red"></div>
+      <div id="circle" class="circle yellow"></div>
+      <div id="circle" class="circle green"></div>
+  </div>
+
+   
+<button onclick="NextNode()" id="change_color" class="traffic_btn">Change color</button>
+<div id="traffic-lights" class="traffic-lights">
+    <div id="circle" class="circle red"></div>
+    <div id="circle" class="circle yellow"></div>
+    <div id="circle" class="circle green"></div>
+</div>
+</div>
       <script src="js.js"></script>
 </body>
 </html>
