--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <ul id="lessons_list" class="lessons_list  ">
         <li class="list_item"><a href="/lesson38/app/index.html">lesson38 (Gulp)</a></li>
         <li class="list_item"><a href="/lesson36/index.html">lesson36 (Animation)</a></li>
+        
+        <li class="list_item"><a href="/exam3/index.html">lesson111</a></li>
+        
 
         <li class="list_item"><a href="/exam2/index.html">exam2 JS</a></li>
         <li class="list_item"><a href="/lesson1/index.html">Lesson 1</a></li>
