--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1 class="title">Beetroot Academy lessons</h1>
         <img id="beetroot_img" src="beet-svgrepo-com.svg" alt="буряк">
     <ul id="lessons_list" class="lessons_list  ">
-        <li class="list_item"><a href="/exam3/index.html">final project</a></li>
+        <li class="list_item"><a href="/final/index.html">final project</a></li>
         <li class="list_item"><a href="/lesson38/app/index.html">lesson38 (Gulp)</a></li>
         <li class="list_item"><a href="/lesson36/index.html">lesson36 (Animation)</a></li>
         
