--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -8,13 +8,14 @@
     <title>lesson4</title>
 </head>
 <body>
-   <img  id="Logo_1" class="Logo_1" src="Logo.png" alt="kasper logo">
-  <div class="layer_1"> 
+    <div class="container">
+    <img  id="Logo_1" class="Logo_1" src="Logo.png" alt="kasper logo">
+ <div class="layer_1"> 
       <p class="layer_2" id="text_1">We are social</p>
    
 </div><hr>
 
-<ul>
+ <ul>
     <li><img src="facebook.png" alt="facebook icon"></li>
     <li><img src="Tweter.png" alt="twitter icon"></li>
     <li><img src="Google.png" alt="google+"></li>
@@ -24,5 +25,7 @@
 <div class="footer">
     <p class="text_last">©2014 -<span id="footer_1"> Kasper</span> All Right Reserved</p>
 </div>
+</div>
+
 </body>
 </html>
