update lesson6 not finished

--- a/lesson5/index.html
+++ b/lesson5/index.html
@@ -8,9 +8,10 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="container">
 <p class="we_are">who we are</p>
 <h1 class="heading_1">hello & nameste</h1>
-<p class="info_1">We do not build websites but user experiences. 
+<p class="info_1">We do not build websites but user experiences.<br>
     We judge our performance according to the impact it makes  </p>
 <div class="navigation">
 <div class="stickers_1" >
@@ -42,14 +43,7 @@
             so take a look at your website's content on a regular basis.</p>
 </div></div>
 
-
-<div class="container_2">
-    <div class="sticker1">
-        <button class="button_1"></button>
-            <h3>Responsive Design</h3>
-                <p>Etiam sagittis velit vitae varius pellentesque. Suspendisse posuer condimentum velit, id vehicula nisi.</p>
-        
-    </div>
 </div>
+
 </body>
 </html>
