update root html

--- a/lesson9/1/index.html
+++ b/lesson9/1/index.html
@@ -7,13 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- text -->
     <h1>Blog</h1>
     <p class="heading_2">Dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer
         citation ullamco laboris nisi ut aliquip e
         x ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</p>
+    <!-- blog container -->
         <div class="container">
             <div class="sticker sticker1">
-          <div class="data">
+          <div class="data data1">
               <p class="info1">20<br>NOV</p>
           </div>
           <div class="info_2">
@@ -45,10 +47,6 @@
             </div>
         </div>
 
-        <div class="footer">
-            <div class="buttom">
-                view more
-            </div>
-        </div>
+       <button class="footer">View more</button>
 </body>
 </html>
