--- a/lesson1/additional/index1.html
+++ b/lesson1/additional/index1.html
@@ -10,6 +10,10 @@
         *{
             font-size: 20px;
         }
+        .container{
+            max-width: 1200px;
+            margin: 0 auto;
+        }
       
         table, tr, th{
             border: 1px solid black;
@@ -18,8 +22,10 @@
         .information{
             text-align: left ;
         }
+
        
     </style>
+    <div class="container">
 <table style="width: 100%;">
     <tr>
         <th>
@@ -95,6 +101,6 @@
         </tr>
     </table>
 
-
+</div>
 </body> 
 </html>
