--- a/lesson5/index.html
+++ b/lesson5/index.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Hello & Nameste</title>
 </head>
 <body>
+    <!-- top text -->
     <div class="container">
 <p class="we_are">who we are</p>
 <h1 class="heading_1">hello & nameste</h1>
 <p class="info_1">We do not build websites but user experiences.<br>
     We judge our performance according to the impact it makes  </p>
+
+    <!-- hover block -->
 <div class="navigation">
 <div class="stickers_1" >
     <div class="images_list_1"></div>
