--- a/lesson7/1/index.html
+++ b/lesson7/1/index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
     <div class="stickers">
+        <!-- element 1 -->
         <div class="block1">
             <h1>$2</h1> <img src="img/orange1.png">
             <h2 class="heading">Bronze <p class="text"> any cup of coffee
                     until $3</p>
             </h2>
         </div>
+        <!-- element 2 -->
         <div class="block1">
             <h1>$3</h1><img src="img/yellow_cup.png">
             <h2 class="heading">Gold
@@ -22,7 +24,7 @@
                     until $5</p>
             </h2>
         </div>
-
+        <!-- element 3 -->
         <div class="block1">
             <h1>$2.5</h1><img src="img/grey_cup.png">
             <h2 class="heading">Silver
