added IT Claster project

--- a/index.html
+++ b/index.html
@@ -44,7 +44,14 @@
                 </div>
               </a>
           </div>
-         
+         <!-- IT claster project -->
+         <div class="works-el"><a href="https://tania-khlevniuk.github.io/index.html" target="_blank"><img src="photos/claster.jpg" class="works-el-photo">
+          <div class="middle">
+              <div class="text">IT Claster project</div>
+            </div>
+          </a>
+      </div>
+
                 <!-- lesson 1  -->
                     <div class="works-el"><a href="lesson1/index.html" target="_blank"><img src="lesson1-photo.jpg" class="works-el-photo">
                         <div class="middle">
