--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Васько Христина</h1>
-    <a href="https://khristinavasko.github.io/chic/index.html">Тестове завдання</a>
+    <a href="chic/index.html">Тестове завдання</a>
         <script src="js.js"></script>
          
         
