add line animation

--- a/chic/index.html
+++ b/chic/index.html
@@ -119,6 +119,7 @@
                     <img src="img/logocircke.png" alt="" class="white">
                  <img src="img/Vector.svg" alt="" class="vector"> 
                  <img src="img/Logo.svg" alt="" class="logo-name">
+                 <img src="img/line.svg" alt="" class="line2">
                  
             </div>
             <div class="slider__item">
@@ -127,6 +128,7 @@
                     <img src="img/logocircke.png" alt="" class="white">
                  <img src="img/Vector.svg" alt="" class="vector"> 
                  <img src="img/Logo.svg" alt="" class="logo-name">
+                 <img src="img/line.svg" alt="" class="line2">
                 </div>
         </div>
          <!-- /slider -->
