--- a/chic/index.html
+++ b/chic/index.html
@@ -90,6 +90,7 @@
 
         <div id="myNav" class="overlay">
         <div class="overlay-content">
+            ul>li.overlay-list
           <a href="#">O nas</a>
           <a href="#">Galerie</a>
           <a href="#">Sluzby</a>
