--- a/lessons/lesson14/1/index.html
+++ b/lessons/lesson14/1/index.html
@@ -10,27 +10,25 @@
 </head>
 <body>
     <header class="block1">
-        <div class="block1_content"></div>
-            <div class="block1_logo">
-                <img src="img\img1.png" alt="" class="logo">
-            </div>
-            <p class="block1_heading-1">
-                WORKIN
-                WITH design LAB
+         <div class="block1_content">
+              <img src="img\img1.png" alt="" class="logo">
+              <p class="block1_heading-1">
+                WORKIN  WITH<br>
+                design LAB
             </p>
             <div class="block1_info">
                 We’ve been helping startups l
                 aunch and grow their businesses.
                  We help you to fill the gap between 
-                 development, 
+                 development, design and manegment
             </div>
-             </div>
-             <img src="img\scroll.svg.png" alt="" class="scroll"></div>
+            <img src="img\scroll.svg.png" alt="" class="scroll">
+         </div>    
     </header>
-   <!-- block 2 -->
 
-   <div class="container_2">
-    <div class="about_us">
+
+   <!-- block 2 -->
+<div class="container_2">
     <fieldset>
         <legend class="info_2">ABOUT US</legend>
        
@@ -46,11 +44,11 @@
         </p>
     </fieldset>
     </div>
-        </div>
+</div>
 
         <!-- block 3  -->
 
-<!-- <div class="container_3">
+<div class="container_3">
     <div class="services">
         <fieldset>
             <legend class="info_3">services</legend>
@@ -62,7 +60,7 @@
                 Based on your requirements, we can provide a complete offering or just the pieces you need. 
             </p>
 </div>
-</div> -->
+</div>
 
 <!-- block 4 -->
 
