--- a/lessons/lesson14/1/index.html
+++ b/lessons/lesson14/1/index.html
@@ -65,8 +65,9 @@
 <!-- block 4 -->
 
 
-<!-- <div class="container_4">
+<div class="container_4">
     <div class="about_us_1">
+
     <fieldset>
         <legend class="info_3">what we do</legend>
        
@@ -90,7 +91,7 @@
     </fieldset>
 
     </div>
-        </div> -->
+        </div>
 
 <!-- block 5 -->
 <!-- 
@@ -105,7 +106,7 @@
     </div> -->
 
     <!-- block 6 -->
-    <!-- <div class="container_6">
+    <div class="container_6">
         <div class="centr">
         <div class="contacts">
             <fieldset>
@@ -119,20 +120,20 @@
             </p>
             <div class="button1">
            <button class="contact_us">
-               <div class="button_text">CONTACT us</div>
+              CONTACT us
            </button>
        
             </fieldset>
             </div> 
         </div>
-    </div> -->
+    </div>
 
     <!-- footer -->
-    <!-- <div class="footer">
+    <div class="footer">
 
             <img src="img/Ellipse_1_copy_12.png" alt="" class="footer_image">
             <p class="footer_text">© 2014. All Rights Reserved Ellipsis.com</p>
-        </div> -->
+        </div>
 
 </body>
 </html>
