--- a/beetroot.html
+++ b/beetroot.html
@@ -33,7 +33,7 @@
                 <li class="blist-item"><a href="lessons/lesson23/loop/index.html">Loops</a></li>
                 <li class="blist-item"><a href="lessons/lesson22/index.html">Lesson22(JS)</a></li>
                 <li class="blist-item"><a href="lessons/lesson15/home1/index.html">Homepage(fruits)</a></li>
-                <li class="blist-item"><a href="lessons/lesson14/1/index.html">not fixed</a></li>
+                <li class="blist-item"><a href="lessons/lesson14/1/index.html">Lesson 14 (Media queries)</a></li>
                 <li class="blist-item"><a href="lessons/lesson13/index.html">Lesson13</a></li>
                 <li class="blist-item"><a href="lessons/lesson12/1/index.html">Lesson12(1)</a></li>
                 <li class="blist-item"><a href="lessons/lesson12/2/index.html">Lesson12(2)</a></li>
