--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li class="works-el"><a href="beetroot.html">Betroot Academy(Front end Web Development)</a></li>
         <li class="works-el"><a href="https://www.pohonia.in.ua/">Pogonya</a></li>
         <li class="works-el"><a href="chic/index.html">Flyfox test</a></li>
+        <li class="works-el"><a href="clersky/app/index.html">Clerksy(not finished)</a></li>
     </ul>
 </div>
    </div>
