update root index

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 <div class="worklist">
     <ul class="worklist">
         <li class="works-el"><a href="beetroot.html">Betroot Academy(Front end Web Development)</a></li>
+        
         <li class="works-el"><a href="https://www.pohonia.in.ua/">Pogonya</a></li>
         <li class="works-el"><a href="chic/index.html">Flyfox test</a></li>
-        <li class="works-el"><a href="clersky/app/index.html">Clerksy(not finished)</a></li>
+        <!-- <li class="works-el"><a href="clersky/app/index.html">Clerksy(not finished)</a></li> -->
     </ul>
 </div>
    </div>
