trying to host angular project

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        <div class="container__top">
         <img src="down.gif" alt="" class="gif">
         <div class="container-right">
-  <h1 class="heading1">Hello, I'm Vasko Chrystina, Front end Web Developer. To see all my works, press the button below</h1>
+  <h1 class="heading1">Hello, I'm Vasko Khrystina, Front end Web Developer. To see all my works, press the button below</h1>
     <button class="open-but">Click here</button>
         </div>
            
@@ -25,7 +25,8 @@
         
         <li class="works-el"><a href="https://www.pohonia.in.ua/">Pogonya</a></li>
         <li class="works-el"><a href="chic/index.html">Flyfox test</a></li>
-        <!-- <li class="works-el"><a href="clersky/app/index.html">Clerksy(not finished)</a></li> -->
+        <li class="works-el"><a href="bachelorapp/client/dist/index.html">Bachelor Angular project</a></li>
+
     </ul>
 </div>
    </div>
